# chainlake-ingestion-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  block_pipeline_realtime.py  block_pipeline_realtime.yaml  pyproject.toml  setup.py  stream_to_kafka_to_blockchain_ingestion_mapping.md
blockchain_ingestion/execution/: result_merger.py
blockchain_ingestion/planner/: block_window.py  range_planner.py
blockchain_ingestion/rpc/: erpc_client.py
blockchain_ingestion/utils/: logging.py
cli/: backfill.py  logs.py  realtime.py
docs/: DLQ.md  README.md  async_rpc_scheduler.md  dlq.md  docker.md  ingestion_flow.md  kafka_data_format.md  observability.md  pipeline_and_entites.md  progress_dashbaord.md
health/: grpc_test_sui_checkpoint.py
k8s/: aiven_bsc-block-configmap.yaml  aiven_bsc-block-deploy.yaml  kafka-ca-secret_template.yaml  kafka-credentials_template.yaml  realtime-otel.yaml  realtime.yaml
k8s/bsc-realtime-ingestion/: bsc-realtime-ingestion-configmap.yaml  bsc-realtime-ingestion-deploy.yaml
k8s/bsc-realtime-ingestion-dev/: bsc-realtime-ingestion-configmap.yaml
k8s/bsc-realtime-ingestion-prod/: bsc-realtime-ingestion-configmap.yaml
k8s/dlq/: dlq-configmap.yaml
rpcstream/: app_runtime.py  main-copy.py  main.py  pipeline.yaml
rpcstream/adapters/: base.py
rpcstream/client/: __init__.py  base.py  grpc.py  jsonrpc.py  models.py
rpcstream/config/: builder.py  loader.py  naming.py  resolver.py  schema.py  settings.py
rpcstream/execution/: ordered_buffer.py  pipeline.py
rpcstream/ingestion/: dlq.py  engine-copy.py  engine.py  fetcher-copy.py  fetcher.py  processor-copy.py  processor.py  run_batch.py
rpcstream/metrics/: client.py  engine.py  kafka.py  registry.py  runtime.py
rpcstream/planner/: block_source.py  stream_cursor.py
rpcstream/proto/: README.md
rpcstream/rpc/: __init__.py  models.py  rpc_client.py
rpcstream/runtime/: block_tracker.py  engine.py  telemetry.py  topic.py
rpcstream/scheduler/: __init__.py  adaptive.py  base.py
rpcstream/state/: __init__.py  checkpoint.py  range_registry.py
rpcstream/utils/: config_loader.py  log_schema.py  logger.py  topic_builder.py
scripts/: README.md  block_pipeline_realtime.py  block_pipeline_realtime.yaml  block_pipeline_realtime_copy.py  block_pipeline_realtime_local.yaml  compact_dlq_payloads.py  dlq_ingestion_examples.jsonl  dlq_replay.py  dlq_retry.py  read_dlq.py  restore_dlq_from_jsonl.py  verify_trace_dlq.py
(+84 files in other folders)
