[project]
name = "rpcstream"
version = "0.1.0"
description = "High-throughput blockchain ingestion engine for realtime streaming and historical backfill."
authors = [
  { name = "Chainlake" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "aiohttp>=3.10.0",
  "aiokafka>=0.11.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "orjson>=3.10.0",
  "uvloop>=0.19.0",
  "tenacity>=9.0.0",
  "prometheus-client>=0.20.0",
  "structlog>=24.4.0",
  "redis>=5.0.7",
  "pyyaml>=6.0.2",
  "opentelemetry-api>=1.17.0",
  "opentelemetry-sdk>=1.17.0",
  "opentelemetry-exporter-otlp>=1.17.0",
  "grpcio>=1.80.0",
  "grpcio-tools>=1.80.0",
  "protobuf>=6.33.6",
  "confluent-kafka[protobuf]>=2.14.0",
]

[project.optional-dependencies]

dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[project.scripts]
chainlake = "cmd.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
